Fixed modal issues on small mobile screens

--- a/src/components/ProfileInfoMobile.module.css
+++ b/src/components/ProfileInfoMobile.module.css
@@ -7,7 +7,6 @@
 
 .box{
     padding: 1rem;
-    border-right: 1px solid rgb(49, 49, 49);
     border-top: 1px solid rgb(49, 49, 49);
     text-align: center;
 }
