--- a/src/components/UI Kit/Loader.module.css
+++ b/src/components/UI Kit/Loader.module.css
@@ -62,6 +62,11 @@
     position: fixed;
     margin: 0 auto;
     top: 20rem;
+    text-align: center;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   
   .loader-6 span{
